codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_prompt_reconnect_modal.snap
---
source: tui/src/cwd_prompt.rs
expression: terminal.backend()
---

Choose working directory to reconnect to this session

  Session = latest cwd recorded in the resident assistant session               
  Current = your current working directory

› 1. Use session directory (/Users/example/session)                             
  2. Use current directory (/Users/example/current)

  Press enter to continue
